1999-03-01  Alex Lancaster  <alex@santafe.edu>

	* userbiblio.sgml: Add id to BIBLIOGRAPHY tag.

	* html.dsl: Customize similarly to swarmdocs.  Add references to
	new common.dsl stylesheet.

	* common.dsl: Add file.  Remove symlink to swarmdocs.

	* print.dsl: Add references to common.dsl.

	* usermeta.sgml: Move COPYRIGHT out of BOOKBIBLIO into BOOKINFO.

	* user2.02.sgml: Update with Paul Johnson's text.  Add some extra
	markup for some text elements - FILENAME, APPLICATION, FUNCTION.

	* user1.01.sgml: Minor text modifications.

	* catalog.in: Add PUBLIC ENTITY for genindex.sgml - the
	automatically generated index.

	* userbook.sgml: Use ENTITY.

	* Begin revision log.
