@@ -39,34 +39,34 @@ PUBLIC "-//SFI Hive//ENTITIES swarm-discrete-event JPEG//EN" figs/swarm-discrete
 PUBLIC "-//SFI Hive//ENTITIES swarm JPEG//EN" figs/swarm.jpeg
 PUBLIC "-//SFI Hive//ENTITIES system-diagram JPEG//EN" figs/system-diagram.jpeg
 
-PUBLIC "-//SFI Hive//ENTITIES discrete-event-sim EPS//EN" figs/discrete-event-sim.eps
-PUBLIC "-//SFI Hive//ENTITIES interface-vs-implementation EPS//EN" figs/interface-vs-implementation.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-activity EPS//EN" figs/libraries-activity.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-itemized EPS//EN" figs/libraries-itemized.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-overview EPS//EN" figs/libraries-overview.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-random-overview EPS//EN" figs/libraries-random-overview.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-random-process EPS//EN" figs/libraries-random-process.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-rankedlist-map EPS//EN" figs/libraries-rankedlist-map.eps
-PUBLIC "-//SFI Hive//ENTITIES libraries-space-hierarchy EPS//EN" figs/libraries-space-hierarchy.eps
-PUBLIC "-//SFI Hive//ENTITIES merging-schedules EPS//EN" figs/merging-schedules.eps
-PUBLIC "-//SFI Hive//ENTITIES modeling EPS//EN" figs/modeling.eps
-PUBLIC "-//SFI Hive//ENTITIES objc-basics EPS//EN" figs/objc-basics.eps
-PUBLIC "-//SFI Hive//ENTITIES oo-principles EPS//EN" figs/oo-principles.eps
-PUBLIC "-//SFI Hive//ENTITIES oo-programming EPS//EN" figs/oo-programming.eps
-PUBLIC "-//SFI Hive//ENTITIES recursive-swarm EPS//EN" figs/recursive-swarm.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-activation EPS//EN" figs/simplebug-activation.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-class-hierarchy EPS//EN" figs/simplebug-class-hierarchy.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-foodspace EPS//EN" figs/simplebug-foodspace.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-model-swarm EPS//EN" figs/simplebug-model-swarm.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-modelswarm2 EPS//EN" figs/simplebug-modelswarm2.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-objc EPS//EN" figs/simplebug-objc.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-observer-swarm EPS//EN" figs/simplebug-observer-swarm.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-probes1 EPS//EN" figs/simplebug-probes1.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-probes2 EPS//EN" figs/simplebug-probes2.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-schedules-1 EPS//EN" figs/simplebug-schedules-1.eps
-PUBLIC "-//SFI Hive//ENTITIES simplebug-schedules-group EPS//EN" figs/simplebug-schedules-group.eps
-PUBLIC "-//SFI Hive//ENTITIES swarm-discrete-event EPS//EN" figs/swarm-discrete-event.eps
-PUBLIC "-//SFI Hive//ENTITIES swarm EPS//EN" figs/swarm.eps
-PUBLIC "-//SFI Hive//ENTITIES system-diagram EPS//EN" figs/system-diagram.eps
+PUBLIC "-//SFI Hive//ENTITIES discrete-event-sim EPS//EN" @top_dossrcdir@/figs/discrete-event-sim.eps
+PUBLIC "-//SFI Hive//ENTITIES interface-vs-implementation EPS//EN" @top_dossrcdir@/figs/interface-vs-implementation.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-activity EPS//EN" @top_dossrcdir@/figs/libraries-activity.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-itemized EPS//EN" @top_dossrcdir@/figs/libraries-itemized.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-overview EPS//EN" @top_dossrcdir@/figs/libraries-overview.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-random-overview EPS//EN" @top_dossrcdir@/figs/libraries-random-overview.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-random-process EPS//EN" @top_dossrcdir@/figs/libraries-random-process.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-rankedlist-map EPS//EN" @top_dossrcdir@/figs/libraries-rankedlist-map.eps
+PUBLIC "-//SFI Hive//ENTITIES libraries-space-hierarchy EPS//EN" @top_dossrcdir@/figs/libraries-space-hierarchy.eps
+PUBLIC "-//SFI Hive//ENTITIES merging-schedules EPS//EN" @top_dossrcdir@/figs/merging-schedules.eps
+PUBLIC "-//SFI Hive//ENTITIES modeling EPS//EN" @top_dossrcdir@/figs/modeling.eps
+PUBLIC "-//SFI Hive//ENTITIES objc-basics EPS//EN" @top_dossrcdir@/figs/objc-basics.eps
+PUBLIC "-//SFI Hive//ENTITIES oo-principles EPS//EN" @top_dossrcdir@/figs/oo-principles.eps
+PUBLIC "-//SFI Hive//ENTITIES oo-programming EPS//EN" @top_dossrcdir@/figs/oo-programming.eps
+PUBLIC "-//SFI Hive//ENTITIES recursive-swarm EPS//EN" @top_dossrcdir@/figs/recursive-swarm.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-activation EPS//EN" @top_dossrcdir@/figs/simplebug-activation.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-class-hierarchy EPS//EN" @top_dossrcdir@/figs/simplebug-class-hierarchy.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-foodspace EPS//EN" @top_dossrcdir@/figs/simplebug-foodspace.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-model-swarm EPS//EN" @top_dossrcdir@/figs/simplebug-model-swarm.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-modelswarm2 EPS//EN" @top_dossrcdir@/figs/simplebug-modelswarm2.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-objc EPS//EN" @top_dossrcdir@/figs/simplebug-objc.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-observer-swarm EPS//EN" @top_dossrcdir@/figs/simplebug-observer-swarm.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-probes1 EPS//EN" @top_dossrcdir@/figs/simplebug-probes1.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-probes2 EPS//EN" @top_dossrcdir@/figs/simplebug-probes2.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-schedules-1 EPS//EN" @top_dossrcdir@/figs/simplebug-schedules-1.eps
+PUBLIC "-//SFI Hive//ENTITIES simplebug-schedules-group EPS//EN" @top_dossrcdir@/figs/simplebug-schedules-group.eps
+PUBLIC "-//SFI Hive//ENTITIES swarm-discrete-event EPS//EN" @top_dossrcdir@/figs/swarm-discrete-event.eps
+PUBLIC "-//SFI Hive//ENTITIES swarm EPS//EN" @top_dossrcdir@/figs/swarm.eps
+PUBLIC "-//SFI Hive//ENTITIES system-diagram EPS//EN" @top_dossrcdir@/figs/system-diagram.eps
 
 SGMLDECL "@top_dossrcdir@/docbook.dcl"
